# stable-diffusion-obsidian

./: README.md  pyproject.toml
stable_diffusion_obsidian/: __init__.py
